integration test working